@@ -161,3 +161,4 @@
 [2025-1.17-02x91] Error in '/etc/init' throws a Kernel Panic
 [2025-1.17-02x92] Improved Persistent File System
 [2025-1.17-02x93] Added Command 'RMSFIX'
+[2025-1.17-02x94] Command 'QUERY' not reading until connection end
