@@ -46,6 +46,7 @@ Copyright (C) 2025 - Mr. Lima
 - Allowed to write on `/bin/` (**Applications**) and `/lib/` (**Package**) for _super-user_
 - Fixed **MIDlet** login for user-only prompt
 - Added support for `list.default` that run by default on all choices of List
+- Command `query` not consuming until the connection end
 
 [ _Notes_ ]
 
@@ -56,3 +57,8 @@ Copyright (C) 2025 - Mr. Lima
 [ _API Nodes_ ]
 
 - `devicefs`: Check if device supports **JSR-75** (_Access to Device File System on `/mnt/`_)
+
+[ _Available Packages_ ]
+
+- `Defualt`: All features of OpenTTY.
+- `Lite`: **Lua Runtime**, **GoBuster**, **Port Scanner** and **X11 Canvas Service** isn't available
